# Arc-OSX-Icons

./: AUTHORS  COPYING  Makefile.am  README.md  configure.ac
src/Arc-OSX-D/: index.theme
